[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/th.jpg" type="Texture" id=1]
[ext_resource path="res://GameTech.gd" type="Script" id=2]
[ext_resource path="res://Rabbit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hunter.tscn" type="PackedScene" id=5]

[node name="Test1" type="Node"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1024.07, 380.794 )
scale = Vector2( 3.46193, 2.02144 )
z_index = -2
texture = ExtResource( 1 )
offset = Vector2( -145.366, -36.5091 )

[node name="Rabbit" parent="." instance=ExtResource( 3 )]
position = Vector2( 817.442, 402.559 )
scale = Vector2( 0.8, 0.8 )
z_index = -1

[node name="Button" type="Button" parent="."]
margin_left = 854.987
margin_top = 530.791
margin_right = 989.987
margin_bottom = 575.791
text = "Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees" type="Node2D" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 784.424, 258.8 )

[node name="Tree2" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 419.079, 500.338 )

[node name="Tree3" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 489.5, 284.471 )

[node name="Tree4" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 653.087, 222.618 )

[node name="Tree5" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 597.683, 114.047 )

[node name="Tree6" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 354.936, 144.777 )

[node name="Tree7" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 291.815, 329.004 )

[node name="Tree8" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 631.929, 422.951 )

[node name="Tree9" parent="Trees" instance=ExtResource( 4 )]
position = Vector2( 465.44, 401.545 )

[node name="Hunters" type="Node2D" parent="."]
z_index = -1

[node name="Hunter" parent="Hunters" groups=[
"Hunters",
] instance=ExtResource( 5 )]
position = Vector2( 197.59, 210.537 )

[node name="Fall" type="ColorRect" parent="."]
margin_left = 229.742
margin_top = 173.557
margin_right = 810.742
margin_bottom = 399.557
color = Color( 0.839216, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Fall"]
modulate = Color( 0.0862745, 0.054902, 0.054902, 1 )
margin_left = 151.901
margin_top = 93.009
margin_right = 287.901
margin_bottom = 118.009
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0.360784, 0.168627, 0.168627, 1 )
text = "Rabbit is sleeping((("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Fall"]
margin_left = 328.881
margin_top = 141.43
margin_right = 499.881
margin_bottom = 205.43
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Replay" type="Button" parent="Fall"]
margin_left = 79.6948
margin_top = 138.063
margin_right = 250.695
margin_bottom = 202.063
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="ColorRect" parent="."]
margin_left = 230.864
margin_top = 173.557
margin_right = 811.864
margin_bottom = 399.557
color = Color( 0.839216, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Next"]
modulate = Color( 0.0862745, 0.054902, 0.054902, 1 )
margin_left = 204.657
margin_top = 64.9475
margin_right = 340.657
margin_bottom = 89.9475
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0.360784, 0.168627, 0.168627, 1 )
text = "You Win!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Next"]
margin_left = 328.881
margin_top = 141.43
margin_right = 499.881
margin_bottom = 205.43
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nextlvl" type="Button" parent="Next"]
margin_left = 79.6948
margin_top = 138.063
margin_right = 250.695
margin_bottom = 202.063
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="sleep" from="Rabbit" to="." method="_on_Rabbit_sleep"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="shoot" from="Hunters/Hunter" to="." method="_on_Hunter_shoot"]
[connection signal="pressed" from="Fall/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Fall/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="Next/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Next/Nextlvl" to="." method="_on_Nextlvl_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
